scss setup complete

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -17,29 +17,70 @@
  //    #SETTINGS
  //\*------------------------------------*/
 
-@import: "settings.defaults";
-@import: "settings.responsive";
+@import "settings.defaults";
+@import "settings.responsive";
 
 ///*------------------------------------*\
 //    #TOOLS
 //\*------------------------------------*/
 
+@import "tools.functions";
+@import "tools.mixins";
+@import "tools.responsive";
+@import "tools.widths";
+
 ///*------------------------------------*\
 //    #GENERIC
 //\*------------------------------------*/
+
+@import "generic.box-sizing";
+@import "generic.normalize";
+@import "generic.reset";
+@import "generic.shared";
 
 ///*------------------------------------*\
 //    #BASE
 //\*------------------------------------*/
 
+@import "base.headings";
+@import "base.images";
+@import "base.lists";
+@import "base.page";
+@import "base.paragraphs";
+
 ///*------------------------------------*\
 //    #OBJECTS
 //\*------------------------------------*/
+
+@import "objects.block";
+@import "objects.box";
+@import "objects.buttons";
+@import "objects.flag";
+@import "objects.layout";
+@import "objects.list-bare";
+@import "objects.list-block";
+@import "objects.list-inline";
+@import "objects.list-ui";
+@import "objects.media";
+@import "objects.pack";
+@import "objects.tables";
+@import "objects.tabs";
 
 ///*------------------------------------*\
 //    #COMPONENTS
 //\*------------------------------------*/
 
+
+
+
 ///*------------------------------------*\
 //    #TRUMPS
 //\*------------------------------------*/
+
+@import "trumps.clearfix";
+@import "trumps.headings";
+@import "trumps.print";
+@import "trumps.spacing-responsive";
+@import "trumps.spacing";
+@import "trumps.widths-responsive";
+@import "trumps.widths";
