--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -4,13 +4,13 @@
 	{{> head meta-title=home.meta-title meta-description=home.meta-description}}
 
 	<body class="index">
-		
+
 		{{> browser-upgrade}}
 
         <header>
 
 			<p>
-				This is the header
+				This is the header 2
 			</p>
 
         </header>
