--- a/templates/styleguide/grid.hbs
+++ b/templates/styleguide/grid.hbs
@@ -2,22 +2,152 @@
 <html class="no-js" lang="en" />
 
 	{{> head meta-title=home.meta-title meta-description=home.meta-description}}
+	
+	<style>
+        .project-layout { 
+        }
+        .project-layout__item p {
+            background-color: #EBEBEB;
+            color: #666;
+            text-align: center;
+            padding: 5px 0;
+        }
+    </style>
 
 	<body class="index">
 
 		{{> browser-upgrade}}
+        
+        <div class="container">
+          
+          <h1>Grid</h1>
+          
+          <hr />
+           
+            <div class="project-layout">
+                <div class="project-layout__item u-1/1-lap-and-up">
+                    <p>1 - 1</p>
+                </div>
+            </div>
+            
+            <div class="project-layout project-layout--tiny">
+                <div class="project-layout__item u-1/2-lap-and-up">
+                    <p>2 - 1/2</p>
+                </div>
+                <div class="project-layout__item u-1/2-lap-and-up">
+                    <p>3 - 1/2</p>
+                </div>
+            </div>
+            
+            <div class="project-layout">
+                <div class="project-layout__item u-1/3-lap-and-up">
+                    <p>1/3</p>
+                </div>
+                <div class="project-layout__item u-1/3-lap-and-up">
+                    <p>1/3</p>
+                </div>
+                <div class="project-layout__item u-1/3-lap-and-up">
+                    <p>1/3</p>
+                </div>
+            </div>
+            
+            <div class="project-layout">
+                <div class="project-layout__item u-1/4-lap-and-up">
+                    <p>1/4</p>
+                </div>
+                <div class="project-layout__item u-1/4-lap-and-up">
+                    <p>1/4</p>
+                </div>
+                <div class="project-layout__item u-1/4-lap-and-up">
+                    <p>1/4</p>
+                </div>
+                <div class="project-layout__item u-1/4-lap-and-up">
+                    <p>1/4</p>
+                </div>
+            </div>
+            
+            <div class="project-layout">
+                <div class="project-layout__item u-1/5-lap-and-up">
+                    <p>1/5</p>
+                </div>
+                <div class="project-layout__item u-1/5-lap-and-up">
+                    <p>1/5</p>
+                </div>
+                <div class="project-layout__item u-1/5-lap-and-up">
+                    <p>1/5</p>
+                </div>
+                <div class="project-layout__item u-1/5-lap-and-up">
+                    <p>1/5</p>
+                </div>
+                <div class="project-layout__item u-1/5-lap-and-up">
+                    <p>1/5</p>
+                </div>
+            </div>
+            
+            <hr />
+            
+            <div class="project-layout project-layout--rev">
+                <div class="project-layout__item u-1/1-lap-and-up">
+                    <p>1 - 1</p>
+                </div>
+            </div>
+            
+            <div class="project-layout project-layout--rev">
+                <div class="project-layout__item u-1/2-lap-and-up">
+                    <p>2 - 1/2</p>
+                </div>
+                <div class="project-layout__item u-1/2-lap-and-up">
+                    <p>3 - 1/2</p>
+                </div>
+            </div>
+            
+            <div class="project-layout">
+                <div class="project-layout__item u-1/3-lap-and-up">
+                    <p>1/3</p>
+                </div>
+                <div class="project-layout__item u-1/3-lap-and-up">
+                    <p>1/3</p>
+                </div>
+                <div class="project-layout__item u-1/3-lap-and-up">
+                    <p>1/3</p>
+                </div>
+            </div>
+            
+            <div class="project-layout">
+                <div class="project-layout__item u-1/4-lap-and-up">
+                    <p>1/4</p>
+                </div>
+                <div class="project-layout__item u-1/4-lap-and-up">
+                    <p>1/4</p>
+                </div>
+                <div class="project-layout__item u-1/4-lap-and-up">
+                    <p>1/4</p>
+                </div>
+                <div class="project-layout__item u-1/4-lap-and-up">
+                    <p>1/4</p>
+                </div>
+            </div>
+            
+            <div class="project-layout">
+                <div class="project-layout__item u-1/5-lap-and-up">
+                    <p>1/5</p>
+                </div>
+                <div class="project-layout__item u-1/5-lap-and-up">
+                    <p>1/5</p>
+                </div>
+                <div class="project-layout__item u-1/5-lap-and-up">
+                    <p>1/5</p>
+                </div>
+                <div class="project-layout__item u-1/5-lap-and-up">
+                    <p>1/5</p>
+                </div>
+                <div class="project-layout__item u-1/5-lap-and-up">
+                    <p>1/5</p>
+                </div>
+            </div>
 
-        <header>
-
-			<p>
-				This is the header
-			</p>
-
-        </header>
-
-
-
-		{{> footer}}
-
+        </div>
+        
+        
 	</body>
 </html>
