typography tempalte added

--- a/templates/styleguide/grid.hbs
+++ b/templates/styleguide/grid.hbs
@@ -17,6 +17,8 @@
 	<body class="index">
 
 		{{> browser-upgrade}}
+       
+        {{> styleguide}}
         
         <div class="container">
           
